feat: add condition that news/weathers request can use LLm or not
